@@ -251,6 +251,9 @@ production.
 * (bug 22227) Special:Listfiles no longer throws an error on bogus file entries
 * (bug 19408) user_properties.up_property: 32 bytes is not enough.
 * (bug 25262) Fix for minification of hardcoded data: URIs in CSS
+* (bug 29263) Add LTR class to the shared CSS to be used for left-to-right text
+  such as SQL queries shown in dberrortext and similar messages in RTL
+  environments
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result.
